--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -45,7 +45,7 @@
               "1"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,7 +116,7 @@
               "3"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
               "15"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -168,7 +168,7 @@
               "1"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -199,26 +199,6 @@
         "  else: \n",
         "    cont += 1\n",
         "    return recursion_3(num, cont)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "recursion_3(0)"
       ]
     },
     {
@@ -238,7 +218,7 @@
         }
       ],
       "source": [
-        "recursion_3(1)"
+        "recursion_3(0)"
       ]
     },
     {
@@ -249,7 +229,7 @@
         {
           "data": {
             "text/plain": [
-              "2"
+              "1"
             ]
           },
           "execution_count": 10,
@@ -258,7 +238,7 @@
         }
       ],
       "source": [
-        "recursion_3(15)"
+        "recursion_3(1)"
       ]
     },
     {
@@ -269,7 +249,7 @@
         {
           "data": {
             "text/plain": [
-              "3"
+              "2"
             ]
           },
           "execution_count": 11,
@@ -278,7 +258,7 @@
         }
       ],
       "source": [
-        "recursion_3(520)"
+        "recursion_3(15)"
       ]
     },
     {
@@ -289,10 +269,30 @@
         {
           "data": {
             "text/plain": [
-              "7"
+              "3"
             ]
           },
           "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "recursion_3(520)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -334,7 +334,7 @@
               "100"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -355,7 +355,7 @@
               "2000"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -392,26 +392,6 @@
         "     return True\n",
         "   else: \n",
         "      return es_potencia(n, b, x + 1) "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 17,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "es_potencia(8, 2)"
       ]
     },
     {
@@ -431,7 +411,7 @@
         }
       ],
       "source": [
-        "es_potencia(64, 4)"
+        "es_potencia(8, 2)"
       ]
     },
     {
@@ -442,10 +422,30 @@
         {
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
           "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "es_potencia(64, 4)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -522,6 +522,38 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Otra:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 1, 1, 2, 2, 2, 3, 3, 3]\n"
+          ]
+        }
+      ],
+      "source": [
+        "def replica_otra(list,n):\n",
+        "    if n == 1 or 0:\n",
+        "        return list\n",
+        "    else:\n",
+        "        return list + replica_otra(list, n-1)\n",
+        "    \n",
+        "lista = replica_otra([1,2,3],3)\n",
+        "lista.sort()\n",
+        "print(lista)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9mXgr_gQRWiH"
       },
@@ -534,21 +566,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def reversaR(lista, lista_reversa = []):\n",
-        "  lista_reversa.append(lista[0])\n",
-        "  if len(lista) == 1: \n",
-        "    lista_reversa.reverse()\n",
-        "    return lista_reversa\n",
-        "  return reversaR(lista[1: ])"
+        "def reversaR(lista):\n",
+        "    if len(lista) == 0:\n",
+        "        return []\n",
+        "    return reversaR(lista[1:]) + [ lista[0] ]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -557,7 +587,7 @@
               "[7, 3, 3, 1]"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -576,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -591,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -600,7 +630,7 @@
               "[4, 3, 2, 1]"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -630,8 +660,46 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
+        "#Otros Ejercicios"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 0 Sumar Elementos de una lista"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def sumar(lista):\n",
+        "    if len(lista) == 0:\n",
+        "        return 0\n",
+        "    return lista[0] + sumar(lista[1:])\n",
         "\n",
+        "lista = [1 , 2 , 3 , 4]\n",
+        "sumar(lista)\n",
         " "
       ]
     },
@@ -669,6 +737,52 @@
         "  cant, suma = _promediar(lista)\n",
         "  return suma / cant\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Funcion Promedio arreglo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def _promediar(lista):\n",
+        "  if len(lista) == 0:\n",
+        "    return 0, 0\n",
+        "  cant, suma = _promediar(lista[1:])\n",
+        "  return cant +1, suma + lista[0]\n",
+        "\n",
+        "def promediar(lista):\n",
+        "  cant, suma = _promediar(lista)\n",
+        "  return suma / cant"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "17.333333333333332"
+            ]
+          },
+          "execution_count": 49,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "lista = [20, 30, 2]\n",
+        "\n",
+        "promediar(lista)"
       ]
     },
     {
