--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -45,7 +45,7 @@
               "1"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,7 +116,7 @@
               "3"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
               "15"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -168,7 +168,7 @@
               "1"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -203,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -212,7 +212,7 @@
               "1"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -232,7 +232,7 @@
               "1"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -252,7 +252,7 @@
               "2"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -272,7 +272,7 @@
               "3"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -292,7 +292,7 @@
               "7"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -334,7 +334,7 @@
               "100"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 47,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -355,7 +355,7 @@
               "2000"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
@@ -405,7 +405,7 @@
               "True"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -425,7 +425,7 @@
               "True"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 51,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
@@ -445,7 +445,7 @@
               "False"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 52,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -466,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -482,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -491,7 +491,7 @@
               "[1, 1, 3, 3, 3, 3, 7, 7]"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -515,7 +515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -527,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -536,7 +536,7 @@
               "[7, 3, 3, 1]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 56,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -570,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -579,7 +579,7 @@
               "[4, 3, 2, 1]"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 58,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -606,10 +606,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def posicion_de(cadena_a: str, cadena_b: str,  cont = 0):\n",
+        "    \n",
+        "    if cadena_a.startswith(cadena_b):\n",
+        "        return cont\n",
+        "    else:\n",
+        "        return posicion_de(cadena_a[1 : ], cadena_b, cont + 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 69,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "cadena_a = \"Un tete a tete con Tete\"\n",
+        "cadena_b = \"te\"\n",
+        "\n",
+        "posicion_de(cadena_a, cadena_b)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -650,119 +680,6 @@
         "lista = [1 , 2 , 3 , 4]\n",
         "sumar(lista)\n",
         " "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zaR3YsHi7SaA"
-      },
-      "source": [
-        "## Recursión con wrappers\n",
-        "\n",
-        "Al diseñar funciones recursivas muchas veces puede ser útil implementar una función **wrapper**, por ejemplo para cambiar los valores que hay que tomar, validar parámetros, inicializar datos o manejar excepciones.\n",
-        "\n",
-        "Se utiliza una función recursiva, llamada funcion auxiliar, como base y luego una funcion no recursiva, llamada wrapper, que utiliza la funcion auxiliar para resolver lo pedido. \n",
-        "\n",
-        "Por ejemplo, si necesitamos escribir una función recursiva para calcular el promedio, puede no ser evidente como hacerlo:\n",
-        "\n",
-        "```python\n",
-        "def promediar(lista):\n",
-        "  if len(lista) == 0:\n",
-        "    return ???\n",
-        "  promediar(lista[1:]) ???\n",
-        "```\n",
-        "\n",
-        "Para calcular un promedio necesitamos computar tanto una suma como contar la cantidad de elementos. Podemos hacerlo con una función auxiliar\n",
-        "\n",
-        "```python\n",
-        "def _promediar(lista):\n",
-        "  if len(lista) == 0:\n",
-        "    return 0, 0\n",
-        "  cant, suma = promediar(lista[1:])\n",
-        "  return cant +1, suma + lista[0]\n",
-        "\n",
-        "def promediar(lista):\n",
-        "  cant, suma = _promediar(lista)\n",
-        "  return suma / cant\n",
-        "```"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Funcion Promedio arreglo"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 48,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def _promediar(lista):\n",
-        "  if len(lista) == 0:\n",
-        "    return 0, 0\n",
-        "  cant, suma = _promediar(lista[1:])\n",
-        "  return cant +1, suma + lista[0]\n",
-        "\n",
-        "def promediar(lista):\n",
-        "  cant, suma = _promediar(lista)\n",
-        "  return suma / cant"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 49,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "17.333333333333332"
-            ]
-          },
-          "execution_count": 49,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "lista = [20, 30, 2]\n",
-        "\n",
-        "promediar(lista)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "--lq2ot56HOe"
-      },
-      "source": [
-        "**Ejercicio 9** Escribir una funcion recursiva que dada una cadena determine si en la misma hay más letras A o letras E. Utilizar una funcion auxiliar."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3dx3RMhe_ZTc"
-      },
-      "source": [
-        "**Ejercicio 10** Escriba una función `potencia(b,n) que calcule la potencia para cualquier n entero, incluso si n es negativa. Utilizar una funcion auxiliar. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XD295CPgAQ0D"
-      },
-      "source": [
-        "**Ejercicio 11** Ya sabemos que la implementación recursiva del cálculo del número de Fibonacci (Fn = Fn−1 + Fn−2, F0 = 0, F1 = 1) es ineficiente porque muchas de las ramas calculan reiteradamente los mismos valores.\n",
-        "\n",
-        "Escribir una función fibonacci(n) que calcule el enésimo número de Fibonacci de forma recursiva pero que utilice un diccionario para almacenar los valores ya computados y no computarlos más de una vez.\n",
-        "\n",
-        "**Nota**: Será necesario implementar una función wrapper para cumplir con la firma de la función pedida."
       ]
     }
   ],
